--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "aliasify": "^1.7.2",
+    "autoprefixer": "^5.2.0",
     "babel-plugin-object-assign": "^1.1.0",
     "babelify": "^6.1.0",
     "browserify": "^10.2.0",
@@ -25,12 +26,15 @@
     "gulp-connect": "^2.2.0",
     "gulp-gh-pages": "^0.5.1",
     "gulp-git": "^1.2.1",
-    "gulp-less": "^3.0.3",
+    "gulp-postcss": "^5.1.10",
     "gulp-rename": "^1.2.2",
     "gulp-streamify": "^0.0.5",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
     "merge-stream": "^0.1.7",
+    "postcss-reporter": "^0.4.0",
+    "precss": "^0.3.0",
+    "stylelint": "^0.7.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.1"
   },
