--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
     "merge-stream": "^0.1.7",
+    "postcss-color-function": "^1.3.2",
     "postcss-reporter": "^0.4.0",
     "precss": "^0.3.0",
     "stylelint": "^0.7.0",
